Bug 22470 - Update style to word wrap (p=rsjtdrjgfuzkfg r=aus id=32-6080)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@19688 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/feathers.css
+++ b/feathers/purplerain/chrome/skin/feathers.css
@@ -1092,7 +1092,7 @@ sb-servicepane-node.active > vbox > hbox.servicepane-node-info > stack > hbox > 
 
 .drop-message {
   color: rgb(212,210,221);
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 /******************************************************************************
